--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,114 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #f8fcff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+:root {
+  --txt--color--second: #818a88;
+}
+
+label {
+  display: block;
+}
+
+a {
+  text-decoration: none;
+  color: blue;
+}
+
+.container {
+  max-width: 1170px;
+  margin: auto;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.flex {
+  display: flex;
+}
+
+.divider {
+  width: 100%;
+  height: 5px;
+  background-color: white;
+}
+
+.error {
+  color: red;
+  font-size: 12px;
+}
+
+@media (min-width: 500px) {
+
+  /* x-small devices*/
+  .container {
+    max-width: 466px;
+  }
+}
+
+@media (min-width: 576px) {
+
+  /* small devices*/
+  .container {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 768px) {
+
+  /* medium devices*/
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 992px) {
+
+  /* pc devices*/
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+
+  /* large screen*/
+  .container {
+    max-width: 1140px;
+  }
+}
+
+.form-container {
+  justify-content: center;
+}
+
+.form {
+  flex-wrap: wrap;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px #80808021;
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.form-left-side,
+.form-right-side {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+}
+
+.form-left-side label,
+.form-right-side p {
+  font-size: 12px;
+  color: var(--txt--color--second);
+  margin-bottom: 4px;
+  letter-spacing: 1.5px;
 }
