--- a/src/css/left-side.css
+++ b/src/css/left-side.css
@@ -41,7 +41,7 @@ select {
     padding: 8px;
 }
 
-.form-left-side input:focus,
+.form-left-side input:focus:not([type="radio"]),
 select:focus {
     outline: 1px solid #80808063;
     border-radius: 5px;
