--- a/src/css/header.css
+++ b/src/css/header.css
@@ -28,4 +28,6 @@
     background-color: white;
     font-size: 12px;
     line-height: 2.5;
+    border: 2px solid rgba(128, 128, 128, 0.47);
+    padding: 5px;
 }
